turbo chat not complete

--- a/app/views/doctor_profiles/show.html.erb
+++ b/app/views/doctor_profiles/show.html.erb
@@ -43,9 +43,23 @@
                           data: { turbo_method: :delete, turbo_confirm: t('activerecord.attributes.user.delete_profile_confirm')},
                           class: "btn btn-danger ms-1" %>
             <% else %>
+            <div class="btn-group-vertical">
               <%= link_to t('controllers.appointments.create'), new_doctors_appointment_url(doctor_id: @doctor_profile.id), class: 'btn btn-primary' %>
+              <%# <%binding.b%>
+              <% if @room.present? %>
+                <%= link_to 'Chat', room_path(@room.title), class: 'btn btn-secondary' %>
+              <% else %>
+                <%= form_with(model: @new_room, url: create_private_room_rooms_path, method: :post) do |f| %>
+                  <div class="form-group">
+                    <%= f.hidden_field :user_ids, value: [@doctor_profile.id, current_user.id].join(',') %>
+                  </div>
+                  <div class="actions mt-1">
+                    <%= f.submit 'New Room', class: 'btn btn-secondary' %>
+                  </div>
+                <% end %>
+              <% end %>
+              </div>
             <% end %>
-
             </div>
           </div>
         </div>
