--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,7 +82,7 @@
               <li class="nav-item active">
                 <a>
                   <%= link_to t('activerecord.attributes.user.sign_in'), new_user_session_path, class: "nav-link, btn btn-dark" %>
-                  <span class="sr-only">v
+                  <span class="sr-only">
                 <%# (current) %>
               </span>
                 </a>
