--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -52,3 +52,25 @@ body.dark {
 .search {
   margin-bottom: 15px;
 }
+
+.pagination {
+  a {
+      text-decoration: none;
+      color: rgb(79, 150, 201);
+  }
+
+  .disabled, a {
+      // margin-right: 1em;
+      // border: 1px solid #ccc;
+      // padding: .5em 1em;
+      // background-color: #f3eded; /* Green */
+      border: none;
+      // border-radius: 12px;
+      // color: blue;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      // font-size: 16px;
+  }
+}
