add category pagination

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -6,4 +6,8 @@
     <div id="results">
       <%= render 'partials/categories', categories: @categories %>
     </div>
+
+    <% if @next_categories %>
+      <%= link_to t('view.categories.next_categories'), next_categories: @next_categories %>
+    <% end %>
 </div>
