--- a/app/views/doctor_profiles/index.html.erb
+++ b/app/views/doctor_profiles/index.html.erb
@@ -55,4 +55,9 @@
     </div>
     <% end %>
   </div>
+  <nav aria-label="Page navigation">
+  <ul class="pagination justify-content-center">
+    <%= doctor_profile_paginate @doctor_profiles %>
+  </ul>
+</nav>
 </section>
