--- a/app/views/doctor_profiles/index.html.erb
+++ b/app/views/doctor_profiles/index.html.erb
@@ -56,8 +56,8 @@
     <% end %>
   </div>
   <nav aria-label="Page navigation">
-  <ul class="pagination justify-content-center">
-    <%= doctor_profile_paginate @doctor_profiles %>
-  </ul>
-</nav>
+    <ul class="pagination justify-content-center">
+      <%= paginate @doctor_profiles %>
+    </ul>
+  </nav>
 </section>
