--- a/app/views/patient_profiles/index.html.erb
+++ b/app/views/patient_profiles/index.html.erb
@@ -1,6 +1,19 @@
 <section class="vh-10" style="background-color: <%= cookies[:theme] %>;">
   <div class="container py-3">
-  <h3 class="text-muted mb-1"><%= t('view.patients') %></h3>
+    <div class="d-flex justify-content-center mb-2 p-3">
+      <h3 class="text-muted mb-1"><%= t('view.patients') %></h3>
+    </div>
+<%# sorting %>
+    <div class="d-flex justify-content-center mb-2 p-3">
+      <%= link_to(order_by(:desc), class: 'bi bi-sort-down') do %>
+        <%= image_tag 'sort-up-alt.svg', class: 'bi bi-sort-down', alt: 'Sort Down' %>
+      <% end %>
+
+      <%= link_to(order_by(:asc), class: 'bi bi-sort-down') do %>
+        <%= image_tag 'sort-down.svg', class: 'bi bi-sort-down', alt: 'Sort Down' %>
+      <% end %>
+    </div>
+
   <% @patient_profiles.each do |patient| %>
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col col-xl-10">
@@ -44,4 +57,9 @@
     </div>
     <% end %>
   </div>
+  <nav aria-label="Page navigation">
+    <ul class="pagination justify-content-center">
+      <%= paginate @patient_profiles %>
+    </ul>
+  </nav>
 </section>
