--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -74,3 +74,100 @@ body.dark {
       // font-size: 16px;
   }
 }
+
+// card
+.card {
+  border: none;
+  border-radius: 10px
+}
+
+.c-details span {
+  font-weight: 300;
+  font-size: 13px
+}
+
+.icon {
+  width: 50px;
+  height: 50px;
+  background-color: #eee;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 39px
+}
+
+.badge span {
+  background-color: #fffbec;
+  width: 60px;
+  height: 25px;
+  padding-bottom: 3px;
+  border-radius: 5px;
+  display: flex;
+  color: #fed85d;
+  justify-content: center;
+  align-items: center
+}
+
+.progress {
+  height: 10px;
+  border-radius: 10px
+}
+
+.progress div {
+  background-color: red
+}
+
+.text1 {
+  font-size: 14px;
+  font-weight: 600
+}
+
+.text2 {
+  color: #a5aec0
+}
+
+// timer
+.promotion__timer {
+  width: 50%;
+
+  .title {
+    text-align: right;
+  }
+
+  .timer {
+    margin-top: 60px;
+    padding-left: 95px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    animation: timer-animation 1s infinite linear; // Add animation here
+  }
+
+  .timer__block {
+    width: 102px;
+    height: 120px;
+    background: #fff;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.25);
+    font-size: 16px;
+    font-weight: 300;
+    text-align: center;
+
+    span {
+      display: block;
+      margin-top: 20px;
+      margin-bottom: 5px;
+      font-size: 56px;
+      font-weight: 700;
+    }
+  }
+}
+
+@keyframes timer-animation { /* Define animation properties here */
+  from {
+    transform: translateX(0); /* Start from right */
+  }
+  to {
+    transform: translateX(-100%); /* Move offscreen to the left */
+  }
+}
