--- a/app/views/watchings/index.html.erb
+++ b/app/views/watchings/index.html.erb
@@ -1,9 +1,7 @@
-<p style="color: green"><%= notice %></p>
-
 <section class="vh-10" style="background-color: <%= cookies[:theme] %>;">
   <div class="container py-3">
     <div class="d-flex justify-content-center mb-2 p-3">
-      <h3 class="text-muted mb-1"><%= t('view.patients') %></h3>
+      <h3 class="text-muted mb-1"><%= t('view.watching.ips') %></h3>
     </div>
     <%# sorting %>
     <div class="d-flex justify-content-center mb-2 p-3">
