--- a/app/views/patient_profiles/show.html.erb
+++ b/app/views/patient_profiles/show.html.erb
@@ -31,6 +31,11 @@
               <%= link_to t('view.notes.new'), new_note_path, class: 'btn btn-info' %>
               <%= link_to t('view.notes.all'), notes_url, class: 'btn btn-info ms-5' %>
           </div>
+          <% if trust_user %>
+            <div class="d-flex justify-content-center mb-2 p-3">
+                <%= link_to t('view.watching.watchings'), watchings_path, class: 'btn btn-info' %>
+            </div>
+          <% end %>
         </div>
         <%# description %>
         <div class="card mb-4 mb-lg-0">
